fix: security hardening - strict auth, sandbox, token refresh, audit expansion
- Admin password: use complex random string (Cfg$2024#Adm!nX9zK), force
  change on first login with complexity validation (upper+lower+digit+special)
- All APIs require authentication: removed permitAll on /api/polling and
  /api/version, client SDK now supports Bearer token via config.client.auth-token
- Script sandbox: strict GraalJS isolation with allowIO(false), allowCreateThread(false),
  allowCreateProcess(false), allowNativeAccess(false), keyword blacklist
  (Runtime, ProcessBuilder, Socket, etc.), suspicious pattern detection,
  64KB size limit, unsafe global removal
- Token auto-refresh: server returns X-Refreshed-Token header when token
  is within 30min of expiry, frontend interceptor auto-updates token,
  explicit POST /api/auth/refresh endpoint available
- Audit log expanded: added user_agent, request_method, request_uri,
  session_id, duration_ms fields; AuditContext populates all dimensions;
  AuditAspect records operation duration; login events recorded
- Password change: POST /api/auth/change-password with complexity enforcement,
  frontend force-change flow on first login